// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status renders correctly with another sort 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Status
    count="20"
    handleSort={[Function]}
    match={
      Object {
        "params": Object {
          "id": "680",
        },
        "url": "/film/680",
      }
    }
    sort="date"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="container"
      >
        <div
          className="count"
        >
          20
           movies found
        </div>
        <div
          className="sort"
        >
          <span
            className="sortBy"
          >
            Sort by
          </span>
          <a
            className="link link-primary"
            onClick={[Function]}
          >
            release date
          </a>
          <a
            className="link link-default"
            onClick={[Function]}
          >
            rating
          </a>
        </div>
      </div>,
      "id": "status",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="count"
          >
            20
             movies found
          </div>,
          <div
            className="sort"
          >
            <span
              className="sortBy"
            >
              Sort by
            </span>
            <a
              className="link link-primary"
              onClick={[Function]}
            >
              release date
            </a>
            <a
              className="link link-default"
              onClick={[Function]}
            >
              rating
            </a>
          </div>,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "20",
              " movies found",
            ],
            "className": "count",
          },
          "ref": null,
          "rendered": Array [
            "20",
            " movies found",
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="sortBy"
              >
                Sort by
              </span>,
              <a
                className="link link-primary"
                onClick={[Function]}
              >
                release date
              </a>,
              <a
                className="link link-default"
                onClick={[Function]}
              >
                rating
              </a>,
            ],
            "className": "sort",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Sort by",
                "className": "sortBy",
              },
              "ref": null,
              "rendered": "Sort by",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "release date",
                "className": "link link-primary",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "release date",
              "type": "a",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "rating",
                "className": "link link-default",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "rating",
              "type": "a",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="container"
        >
          <div
            className="count"
          >
            20
             movies found
          </div>
          <div
            className="sort"
          >
            <span
              className="sortBy"
            >
              Sort by
            </span>
            <a
              className="link link-primary"
              onClick={[Function]}
            >
              release date
            </a>
            <a
              className="link link-default"
              onClick={[Function]}
            >
              rating
            </a>
          </div>
        </div>,
        "id": "status",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="count"
            >
              20
               movies found
            </div>,
            <div
              className="sort"
            >
              <span
                className="sortBy"
              >
                Sort by
              </span>
              <a
                className="link link-primary"
                onClick={[Function]}
              >
                release date
              </a>
              <a
                className="link link-default"
                onClick={[Function]}
              >
                rating
              </a>
            </div>,
          ],
          "className": "container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "20",
                " movies found",
              ],
              "className": "count",
            },
            "ref": null,
            "rendered": Array [
              "20",
              " movies found",
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="sortBy"
                >
                  Sort by
                </span>,
                <a
                  className="link link-primary"
                  onClick={[Function]}
                >
                  release date
                </a>,
                <a
                  className="link link-default"
                  onClick={[Function]}
                >
                  rating
                </a>,
              ],
              "className": "sort",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "Sort by",
                  "className": "sortBy",
                },
                "ref": null,
                "rendered": "Sort by",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "release date",
                  "className": "link link-primary",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "release date",
                "type": "a",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "rating",
                  "className": "link link-default",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "rating",
                "type": "a",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Status renders correctly with props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Status
    count="20"
    handleSort={[Function]}
    match={
      Object {
        "params": Object {
          "id": "680",
        },
        "url": "/film/680",
      }
    }
    sort="rating"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="container"
      >
        <div
          className="count"
        >
          20
           movies found
        </div>
        <div
          className="sort"
        >
          <span
            className="sortBy"
          >
            Sort by
          </span>
          <a
            className="link link-default"
            onClick={[Function]}
          >
            release date
          </a>
          <a
            className="link link-primary"
            onClick={[Function]}
          >
            rating
          </a>
        </div>
      </div>,
      "id": "status",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="count"
          >
            20
             movies found
          </div>,
          <div
            className="sort"
          >
            <span
              className="sortBy"
            >
              Sort by
            </span>
            <a
              className="link link-default"
              onClick={[Function]}
            >
              release date
            </a>
            <a
              className="link link-primary"
              onClick={[Function]}
            >
              rating
            </a>
          </div>,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "20",
              " movies found",
            ],
            "className": "count",
          },
          "ref": null,
          "rendered": Array [
            "20",
            " movies found",
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="sortBy"
              >
                Sort by
              </span>,
              <a
                className="link link-default"
                onClick={[Function]}
              >
                release date
              </a>,
              <a
                className="link link-primary"
                onClick={[Function]}
              >
                rating
              </a>,
            ],
            "className": "sort",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Sort by",
                "className": "sortBy",
              },
              "ref": null,
              "rendered": "Sort by",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "release date",
                "className": "link link-default",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "release date",
              "type": "a",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "rating",
                "className": "link link-primary",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "rating",
              "type": "a",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="container"
        >
          <div
            className="count"
          >
            20
             movies found
          </div>
          <div
            className="sort"
          >
            <span
              className="sortBy"
            >
              Sort by
            </span>
            <a
              className="link link-default"
              onClick={[Function]}
            >
              release date
            </a>
            <a
              className="link link-primary"
              onClick={[Function]}
            >
              rating
            </a>
          </div>
        </div>,
        "id": "status",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="count"
            >
              20
               movies found
            </div>,
            <div
              className="sort"
            >
              <span
                className="sortBy"
              >
                Sort by
              </span>
              <a
                className="link link-default"
                onClick={[Function]}
              >
                release date
              </a>
              <a
                className="link link-primary"
                onClick={[Function]}
              >
                rating
              </a>
            </div>,
          ],
          "className": "container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "20",
                " movies found",
              ],
              "className": "count",
            },
            "ref": null,
            "rendered": Array [
              "20",
              " movies found",
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="sortBy"
                >
                  Sort by
                </span>,
                <a
                  className="link link-default"
                  onClick={[Function]}
                >
                  release date
                </a>,
                <a
                  className="link link-primary"
                  onClick={[Function]}
                >
                  rating
                </a>,
              ],
              "className": "sort",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "Sort by",
                  "className": "sortBy",
                },
                "ref": null,
                "rendered": "Sort by",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "release date",
                  "className": "link link-default",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "release date",
                "type": "a",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "rating",
                  "className": "link link-primary",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "rating",
                "type": "a",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Status renders correctly without props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Status />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": null,
      "id": "status",
    },
    "ref": null,
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": null,
        "id": "status",
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
